--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
-    "material-table": "^1.36.1",
+    "material-table": "^1.36.4",
     "prop-types": "latest",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
