--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^3.0.2",
-    "material-table": "^1.36.4",
+    "material-table": "^1.39.0",
     "prop-types": "latest",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "react-select": "^2.4.3"
+    "react-select": "^2.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
