--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "latest",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-player": "^1.12.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
     "react-select": "^2.4.4"
