--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "latest",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-particles-js": "^2.7.0",
     "react-player": "^1.12.0",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
