--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.0",
+    "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^3.0.2",
-    "material-table": "^1.52.0",
+    "material-table": "^1.57.2",
     "prop-types": "latest",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-particles-js": "^2.7.0",
-    "react-player": "^1.13.0",
-    "react-responsive-carousel": "^3.1.50",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-particles-js": "^2.7.1",
+    "react-player": "^1.15.2",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.4.0",
     "react-select": "^2.4.4",
-    "serve": "^11.2.0"
+    "serve": "^11.3.0"
   },
   "scripts": {
     "build": "react-scripts build",
