--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "react-scripts start",
+    "dev": "PORT=3000 react-scripts start",
     "start": "serve -s build",
     "heroku-postbuild": "npm run build"
   },
